Update to issues #501 & #473 - Include VariantEffect and geneSymbol annotations on ClinVarData at build time.